<b>2009-07-21</b>

* Plane name added to registration automatically for FlightMemory imports
* Add byte-order mark to CSV exports so Excel understands that they're UTF-8
* Workaround: Non-ASCII characters stripped from FM imports before parsing (2824341)
* Bugfix: Suppress PHP warnings for missing airports/airlines

<b>2009-07-20</b>

* Bugfix: Trip edit/delete broken (2823849)

<b>2009-07-18</b>

* Airline maps default to direct only, codeshares can be enabled in filter
* Non-IATA airlines now filtered out from quicksearch
* Inactive airlines now filtered out from quicksearch
* No map resizing when routemap airline filter is changed
* Bugfix: Airport location shown even when there are no routes

<b>2009-07-17</b>

* Lithuanian updated
* Bugfix: Airline maps gray out all airports with codeshares (2822898)

<b>2009-07-14</b>

* Quick search now supports airlines
* Airline filter can now be used for airport route maps
* Codeshare flights now shown as dotted lines
* Distances can be shown in mi or km
* Statsbox not shown in route map mode
* Purged unused strings from localizations
* Bugfix: Gap between world halves on some resolutions should be eliminated now
* Bugfix: Refresh forced when changing language on logging in

<b>2009-07-13</b>

* Bugfix: Airport add from Import now works (2820603)

<b>2009-07-02</b>

* Launched German (de), Lithuanian (lt), Polish (pl), Swedish (sv)
* New icons for layer switcher, minimap
* Fix tab index bug for search

<b>2009-06-26</b>

* Airport route maps added (courtesy of Airline Route Mapper)
* Quick search widget added
* Autocomplete functionality changed, with fast delete (reset) of previously autocompleted entries
* DB licenses changed to Open Database License

<b>2009-06-23</b>

* Duplicate IATA codes no longer allowed

<b>2009-06-19</b>

* Language selector available for profile, trip display
* Switch UI language to user preference on login
* Bugfix: Facebook "Sign up" link was broken
* Additional translation for Finnish (fi)
